# syncr

./: Cargo.toml  out.txt
src/: client.rs  constants.rs  entry.rs  lib.rs  main.rs  message.rs  sender.rs
testdir/: file.txt
testdir/inner_dir/: file2.txt
tests/: tests.rs
