[package]
name = "syncr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version="1.19.0", features = ["v4"]}
local-ip-address = "0.6"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
